--- a/Learning_Python/Data Manipulation With Pandas.ipynb
+++ b/Learning_Python/Data Manipulation With Pandas.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises"
+    "# Exercises Part 1"
    ]
   },
   {
@@ -489,6 +489,616 @@
    "metadata": {},
    "source": [
     "# Part 2: Sorting and subsetting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To sort elements in our data frame, we use the following structure:\n",
+    "    \n",
+    "- `data_frame.sort_values(\"column_name\")`\n",
+    "- `data_frame.sort_values(\"column_name\", ascending = False)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting by multiples variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `data_frame.sort_values([\"var1\", \"var2\"])`\n",
+    "- `data_frame.sort_values([\"var1\", \"var2\"], ascending=[True, False])`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `data_frame[\"column_name\"]`\n",
+    "- `data_frame[\"column_name1\", \"column_name2\"]` for multiple columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subsetting rows\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `data_frame[\"col_name\"] > 50`\n",
+    "- `data_frame[data_frame[\"col_name\"] > 50]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subsetting based on text data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `data[data[\"col_name\"] == \"Name\"]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subsetting based on dates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `dogs[dogs[\"date_of_birth\"] > \"2015-01-01\"]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subsetting base on multiple conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`is_lab = dogs[\"breed\"] == \"Labrador\"`\n",
+    "\n",
+    "`is_brown = dogs[\"color\"] == 'Brown'`\n",
+    "\n",
+    "`dogs[is_lab & is_brown]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- or we can do all in one line:\n",
+    "    `dogs[(dogs[\"breed\"] == \"Labrador\") & (dogs[\"color\"] == 'Brown')]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subsetting using `.isin()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`is_black_or_brown = dogs[\"color\"].isin([\"Black\", \"Brown\"])`\n",
+    "`dogs[is_black_or_brown]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Sort homelessness by the number of homeless individuals, from smallest to largest, and save this as `homelessness_ind`. Print the head of the sorted DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homelessness_ind = homelessness.sort_values(\"individuals\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>individuals</th>\n",
+       "      <th>family_members</th>\n",
+       "      <th>state_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Mountain</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>434.0</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>577601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>34</td>\n",
+       "      <td>West North Central</td>\n",
+       "      <td>North Dakota</td>\n",
+       "      <td>467.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>758080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>South Atlantic</td>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>708.0</td>\n",
+       "      <td>374.0</td>\n",
+       "      <td>965479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>39</td>\n",
+       "      <td>New England</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>747.0</td>\n",
+       "      <td>354.0</td>\n",
+       "      <td>1058287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>45</td>\n",
+       "      <td>New England</td>\n",
+       "      <td>Vermont</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>624358</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0              region         state  individuals  family_members  \\\n",
+       "50          50            Mountain       Wyoming        434.0           205.0   \n",
+       "34          34  West North Central  North Dakota        467.0            75.0   \n",
+       "7            7      South Atlantic      Delaware        708.0           374.0   \n",
+       "39          39         New England  Rhode Island        747.0           354.0   \n",
+       "45          45         New England       Vermont        780.0           511.0   \n",
+       "\n",
+       "    state_pop  \n",
+       "50     577601  \n",
+       "34     758080  \n",
+       "7      965479  \n",
+       "39    1058287  \n",
+       "45     624358  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homelessness_ind.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Sort homelessness by the number of homeless family_members in descending order, and save this as homelessness_fam. Print the head of the sorted DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homelessness_fam = homelessness.sort_values(\"family_members\", ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>individuals</th>\n",
+       "      <th>family_members</th>\n",
+       "      <th>state_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Mid-Atlantic</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>39827.0</td>\n",
+       "      <td>52070.0</td>\n",
+       "      <td>19530351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>California</td>\n",
+       "      <td>109008.0</td>\n",
+       "      <td>20964.0</td>\n",
+       "      <td>39461588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>New England</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>6811.0</td>\n",
+       "      <td>13257.0</td>\n",
+       "      <td>6882635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>South Atlantic</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>21443.0</td>\n",
+       "      <td>9587.0</td>\n",
+       "      <td>21244317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>43</td>\n",
+       "      <td>West South Central</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>19199.0</td>\n",
+       "      <td>6111.0</td>\n",
+       "      <td>28628666</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0              region          state  individuals  \\\n",
+       "32          32        Mid-Atlantic       New York      39827.0   \n",
+       "4            4             Pacific     California     109008.0   \n",
+       "21          21         New England  Massachusetts       6811.0   \n",
+       "9            9      South Atlantic        Florida      21443.0   \n",
+       "43          43  West South Central          Texas      19199.0   \n",
+       "\n",
+       "    family_members  state_pop  \n",
+       "32         52070.0   19530351  \n",
+       "4          20964.0   39461588  \n",
+       "21         13257.0    6882635  \n",
+       "9           9587.0   21244317  \n",
+       "43          6111.0   28628666  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homelessness_fam.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Sort homelessness first by region (ascending), and then by number of family members (descending). Save this as homelessness_reg_fam. Print the head of the sorted DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>individuals</th>\n",
+       "      <th>family_members</th>\n",
+       "      <th>state_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>6752.0</td>\n",
+       "      <td>3891.0</td>\n",
+       "      <td>12723071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>35</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>6929.0</td>\n",
+       "      <td>3320.0</td>\n",
+       "      <td>11676341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>5209.0</td>\n",
+       "      <td>3142.0</td>\n",
+       "      <td>9984072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>49</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>2740.0</td>\n",
+       "      <td>2167.0</td>\n",
+       "      <td>5807406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>Indiana</td>\n",
+       "      <td>3776.0</td>\n",
+       "      <td>1482.0</td>\n",
+       "      <td>6695497</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0              region      state  individuals  family_members  \\\n",
+       "13          13  East North Central   Illinois       6752.0          3891.0   \n",
+       "35          35  East North Central       Ohio       6929.0          3320.0   \n",
+       "22          22  East North Central   Michigan       5209.0          3142.0   \n",
+       "49          49  East North Central  Wisconsin       2740.0          2167.0   \n",
+       "14          14  East North Central    Indiana       3776.0          1482.0   \n",
+       "\n",
+       "    state_pop  \n",
+       "13   12723071  \n",
+       "35   11676341  \n",
+       "22    9984072  \n",
+       "49    5807406  \n",
+       "14    6695497  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort homelessness by region, then descending family members\n",
+    "homelessness_reg_fam = homelessness.sort_values([\"region\", \"family_members\"], ascending = [True, False])\n",
+    "\n",
+    "# Print the top few rows\n",
+    "homelessness_reg_fam.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Subsetting columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Create a DataFrame called individuals that contains only the individuals column of homelessness.\n",
+    "Print the head of the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      2570.0\n",
+      "1      1434.0\n",
+      "2      7259.0\n",
+      "3      2280.0\n",
+      "4    109008.0\n",
+      "Name: individuals, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select the individuals column\n",
+    "individuals = homelessness[\"individuals\"]\n",
+    "\n",
+    "# Print the head of the result\n",
+    "print(individuals.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Create a DataFrame called state_fam that contains only the state and family_members columns of homelessness, in that order.\n",
+    "Print the head of the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        state  family_members\n",
+      "0     Alabama           864.0\n",
+      "1      Alaska           582.0\n",
+      "2     Arizona          2606.0\n",
+      "3    Arkansas           432.0\n",
+      "4  California         20964.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select the state and family_members columns\n",
+    "state_fam = homelessness[[\"state\", \"family_members\"]]\n",
+    "\n",
+    "# Print the head of the result\n",
+    "print(state_fam.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Create a DataFrame called ind_state that contains the individuals and state columns of homelessness, in that order.\n",
+    "Print the head of the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   individuals       state\n",
+      "0       2570.0     Alabama\n",
+      "1       1434.0      Alaska\n",
+      "2       7259.0     Arizona\n",
+      "3       2280.0    Arkansas\n",
+      "4     109008.0  California\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select only the individuals and state columns, in that order\n",
+    "ind_state = homelessness[[\"individuals\", \"state\"]]\n",
+    "\n",
+    "# Print the head of the result\n",
+    "print(ind_state.head())"
    ]
   },
   {
