--- a/R_Scripts_and_Projects/Correlation and regression/Correlation_regression/001_visualizing_two_variables.Rmd
+++ b/R_Scripts_and_Projects/Correlation and regression/Correlation_regression/001_visualizing_two_variables.Rmd
@@ -102,3 +102,65 @@ smoking %>%
   ggplot(aes(x = age, y = amt_weekdays)) +
   geom_point()
 ```
+
+# Transformations
+
+The relationship between two variables may not be linear. In these cases we can sometimes see strange and even inscrutable patterns in a scatterplot of the data. Sometimes there really is no meaningful relationship between the two variables. Other times, a careful *transformation* of one or both of the variables can reveal a clear relationship.
+
+Recall the bizarre pattern that you saw in the scatterplot between brain weight and body weight among mammals in a previous exercise. Can we use transformations to clarify this relationship?
+
+`ggplot2` provides several different mechanisms for viewing transformed relationships. The `coord_trans()` function transforms the coordinates of the plot. Alternatively, the `scale_x_log10()` and `scale_y_log10()` functions perform a base-10 log transformation of each axis. Note the differences in the appearance of the axes.
+
+1.  Use `coord_trans()` to create a scatterplot showing how a mammal's brain weight varies as a function of its body weight, where both the x and y axes are on a `"log10"` scale.
+
+```{r}
+mammals %>% 
+  ggplot(aes(x = body_wt, y = brain_wt)) +
+  geom_point() +
+  coord_trans(x = "log10", y = "log10")
+```
+
+2.  Use `scale_x_log10()` and `scale_y_log10()` to achieve the same effect but with different axis labels and grid lines.
+
+```{r}
+# Scatterplot with scale_x_log10() and scale_y_log10()
+ggplot(data = mammals, aes(x = body_wt, y = brain_wt)) +
+  geom_point() +
+  scale_x_log10() + 
+  scale_y_log10()
+```
+
+# Identifying outliers
+
+In Chapter 5, we will discuss how outliers can affect the results of a linear regression model and how we can deal with them. For now, it is enough to simply identify them and note how the relationship between two variables may change as a result of removing outliers.
+
+Recall that in the baseball example earlier in the chapter, most of the points were clustered in the lower left corner of the plot, making it difficult to see the general pattern of the majority of the data. This difficulty was caused by a few outlying players whose on-base percentages (OBPs) were exceptionally high. These values are present in our dataset only because these players had very few batting opportunities.
+
+Both OBP and SLG are known as *rate* statistics, since they measure the frequency of certain events (as opposed to their *count*). In order to compare these rates sensibly, it makes sense to include only players with a reasonable number of opportunities, so that these observed rates have the chance to approach their long-run frequencies.
+
+In Major League Baseball, batters qualify for the batting title only if they have 3.1 plate appearances per game. This translates into roughly 502 plate appearances in a 162-game season. The `mlbBat10` dataset does not include plate appearances as a variable, but we can use at-bats (`AB`) -- which constitute a subset of plate appearances -- as a proxy.
+
+-   Use `filter()` to keep only players who had at least 200 at-bats, assigning to `ab_gt_200`.
+
+```{=html}
+<!-- -->
+```
+-   Using `ab_gt_200`, create a scatterplot for `SLG` as a function of `OBP`.
+
+-   Find the row of `ab_gt_200` corresponding to the one player (with at least 200 at-bats) whose OBP was below 0.200.
+
+```{r}
+ab_gt_200 <- mlbbat10 %>% 
+  dplyr::filter(at_bat >= 200)
+```
+
+```{r}
+ab_gt_200 %>% 
+  ggplot(aes(x = obp, y = slg)) +
+  geom_point()
+```
+
+```{r}
+ab_gt_200 %>% 
+  filter(obp < 0.200)
+```
