--- a/R_Scripts_and_Projects/Correlation_regression/002_correlation.Rmd
+++ b/R_Scripts_and_Projects/Correlation_regression/002_correlation.Rmd
@@ -17,3 +17,200 @@ output:
 This script is based on the course: **Correlation and Regression in R** available on Data Camp.
 
 # Quantifying the strength of bivariate relationships
+
+- Correlation coefficient between -1 and 1
+- Sign: direction
+- Magnitude: strength
+
+# Pearson product-moment correlation
+
+$$
+r(x, y) = \frac{Cov(x, y)}{\sqrt{SXX \cdot SYY}}
+$$
+Alternative definition:
+
+$$
+r(x,y) = \frac{\sum_{i = 1}^{n}(x_i - \overline{x})(y_
+i - \overline{y})}{\sqrt{\sum_{i = 1}^{n}(x_i - \overline{x})^2 \cdot \sum_{i = 1}^{n} (y_i - \overline{y})^2}}
+$$
+
+# Computing correlation
+
+The `cor(x, y)` function will compute the Pearson product-moment correlation between variables, x and y. Since this quantity is symmetric with respect to x and y, it doesn't matter in which order you put the variables.
+
+At the same time, the `cor()` function is very conservative when it encounters missing data (e.g. NAs). The use argument allows you to override the default behavior of returning NA whenever any of the values encountered is NA. Setting the use argument to "pairwise.complete.obs" allows cor() to compute the correlation coefficient for those observations where the values of x and y are both not missing.
+
+```{r, warning=FALSE, message=FALSE}
+library(openintro)
+library(ggplot2)
+library(tidyverse)
+```
+
+- Use cor() to compute the correlation between the birthweight of babies in the ncbirths dataset and their mother's age. There is no missing data in either variable.
+- Compute the correlation between the birthweight and the number of weeks of gestation for all non-missing pairs.
+
+```{r}
+ncbirths %>% 
+  summarize(N = n(), r = cor(weight, mage))
+```
+```{r}
+ncbirths %>% 
+  summarize(N = n(), r = cor(weight, weeks, use = "pairwise.complete.obs"))
+```
+
+# The Anscombe dataset
+
+```{r}
+ggplot(data = anscombe, aes(x = x1, y = y1)) +
+  geom_point() 
+```
+
+```{r}
+ggplot(data = anscombe, aes(x = x2, y = y2)) +
+  geom_point() 
+```
+
+```{r}
+ggplot(data = anscombe, aes(x = x3, y = y3)) +
+  geom_point() 
+```
+
+```{r}
+ggplot(data = anscombe, aes(x = x4, y = y4)) +
+  geom_point() 
+```
+
+- In both x and y, there is the same correlation, and the same regression line.
+How is it possible?
+
+- Anscombe 1: There is a strong correlation, the realtionship is linear. 
+
+```{r}
+cor(anscombe$x1, anscombe$y1)
+```
+- Anscombe 2: The correlation coefficient is high, but there is clearly a non-linear relationship. 
+
+```{r}
+cor(anscombe$x2, anscombe$y2)
+```
+
+- Anscombe 3: There is correlation is high, and we have an outlier.
+
+```{r}
+cor(anscombe$x3, anscombe$y3)
+```
+
+- Anscombe 4: Only the outlier give us the appearance of a correlation, but this correlation is specious. 
+
+```{r}
+cor(anscombe$x4, anscombe$y4)
+```
+
+# Exploring Anscombe
+
+- In 1973, Francis Anscombe famously created four datasets with remarkably similar numerical properties, but obviously different graphic relationships. 
+- The Anscombe dataset contains the x and y coordinates for these four datasets, along with a grouping variable, set, that distinguishes the quartet.
+
+- Reading the dataset:
+
+```{r}
+Anscombe <- read.csv("~/Documents/GitHub/Data_Science/R_Scripts_and_Projects/Correlation_regression/Anscombe.txt", sep="")
+glimpse(Anscombe)
+```
+- It may be helpful to remind yourself of the graphic relationship by viewing the four scatterplots:
+
+```{r}
+Anscombe %>% 
+  ggplot(aes(x = x, y = y)) +
+  geom_point() +
+  facet_wrap(~set)
+```
+
+- For each of the four sets of data points in the Anscombe dataset, compute the following in the order specified. Names are provided in your call to `summarize()`.
+  + Number of observations, N
+  + Mean of x
+  + Standard deviation of x
+  + Mean of y
+  + Standard deviation of y
+  + Correlation coefficient between x and y
+  
+```{r}
+Anscombe %>% 
+  group_by(set) %>% 
+  summarize(
+    N = n(),
+    mean_of_x = mean(x),
+    std_dev_of_x = sd(x),
+    mean_of_y = mean(y),
+    std_dev_of_y = sd(y),
+    correlation_between_x_and_y = cor(x, y)
+  )
+```
+
+# Perception of correlation 
+
+Estimating the value of the correlation coefficient between two quantities from their scatterplot can be tricky. Statisticians have shown that people's perception of the strength of these relationships can be influenced by design choices like the x and y scales.
+
+Nevertheless, with some practice your perception of correlation will improve. Toggle through the four scatterplots in the plotting window, each of which you've seen in a previous exercise. Jot down your best estimate of the value of the correlation coefficient between each pair of variables. Then, compare these values to the actual values you compute in this exercise.
+
+1. Draw the plot then calculate the correlation between OBP and SLG for all players in the mlbBat10 dataset.
+
+```{r}
+ggplot(data = mlbbat10, aes(x = obp, y = slg)) +
+  geom_point()
+
+# Correlation for all baseball players
+mlbbat10 %>%
+  summarize(N = n(), r = cor(obp, slg))
+```
+2. Draw the plot then calculate the correlation between OBP and SLG for all players in the mlbBat10 dataset with at least 200 at-bats.
+
+```{r}
+# Run this and look at the plot
+mlbbat10 %>% 
+    filter(at_bat > 200) %>%
+    ggplot(aes(x = obp, y = slg)) + 
+    geom_point()
+
+# Correlation for all players with at least 200 ABs
+mlbbat10 %>%
+  filter(at_bat >= 200) %>%
+  summarize(N = n(), r = cor(obp, slg))
+```
+The correlation coefficient decreased. 
+
+3. Draw the plot then calculate the correlation between height and weight for each sex in the bdims dataset.
+
+```{r}
+# Run this and look at the plot
+ggplot(data = bdims, aes(x = hgt, y = wgt, color = factor(sex))) +
+  geom_point() 
+```
+
+```{r}
+# Correlation of body dimensions
+bdims %>%
+  group_by(sex) %>%
+  summarize(N = n(), r = cor(hgt, wgt))
+```
+4. Draw the plot then calculate the correlation between body weight and brain weight for all species of mammals. Alongside this computation, compute the correlation between the same two quantities after taking their natural logarithms.
+
+```{r}
+mammals %>% 
+  ggplot(aes(x = body_wt, y = brain_wt)) +
+  geom_point() +
+  scale_x_log10() +
+  scale_y_log10()
+```
+
+```{r}
+# Correlation among mammals, with and without log
+mammals %>%
+  summarize(N = n(), 
+            r = cor(body_wt, brain_wt), 
+            r_log = cor(log(body_wt), log(brain_wt)))
+```
+
+When transforming for log, the correlaiton coefficient increases.
+
+# Interpretation of Correlation
