--- a/Learning_Python/001_Data_Manipulation_With_Pandas/002_Aggregating_Data.ipynb
+++ b/Learning_Python/001_Data_Manipulation_With_Pandas/002_Aggregating_Data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +496,8 @@
        "      <th>temperature_c</th>\n",
        "      <th>fuel_price_usd_per_l</th>\n",
        "      <th>unemployment</th>\n",
-       "      <th>cum_weekly_sale</th>\n",
-       "      <th>cum_max_sales</th>\n",
        "      <th>cum_weekly_sales</th>\n",
+       "      <th>cum_max_sales</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -516,7 +515,6 @@
        "      <td>8.106</td>\n",
        "      <td>24924.50</td>\n",
        "      <td>24924.50</td>\n",
-       "      <td>24924.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -532,7 +530,6 @@
        "      <td>8.106</td>\n",
        "      <td>46752.40</td>\n",
        "      <td>24924.50</td>\n",
-       "      <td>46752.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -548,7 +545,6 @@
        "      <td>7.808</td>\n",
        "      <td>104010.83</td>\n",
        "      <td>57258.43</td>\n",
-       "      <td>104010.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -564,7 +560,6 @@
        "      <td>7.808</td>\n",
        "      <td>121424.77</td>\n",
        "      <td>57258.43</td>\n",
-       "      <td>121424.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -580,7 +575,6 @@
        "      <td>7.808</td>\n",
        "      <td>138982.86</td>\n",
        "      <td>57258.43</td>\n",
-       "      <td>138982.86</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -594,22 +588,22 @@
        "3           3      1    A           1  2010-05-07      17413.94       False   \n",
        "4           4      1    A           1  2010-06-04      17558.09       False   \n",
        "\n",
-       "   temperature_c  fuel_price_usd_per_l  unemployment  cum_weekly_sale  \\\n",
-       "0       5.727778              0.679451         8.106         24924.50   \n",
-       "1       8.055556              0.693452         8.106         46752.40   \n",
-       "2      16.816667              0.718284         7.808        104010.83   \n",
-       "3      22.527778              0.748928         7.808        121424.77   \n",
-       "4      27.050000              0.714586         7.808        138982.86   \n",
+       "   temperature_c  fuel_price_usd_per_l  unemployment  cum_weekly_sales  \\\n",
+       "0       5.727778              0.679451         8.106          24924.50   \n",
+       "1       8.055556              0.693452         8.106          46752.40   \n",
+       "2      16.816667              0.718284         7.808         104010.83   \n",
+       "3      22.527778              0.748928         7.808         121424.77   \n",
+       "4      27.050000              0.714586         7.808         138982.86   \n",
        "\n",
-       "   cum_max_sales  cum_weekly_sales  \n",
-       "0       24924.50          24924.50  \n",
-       "1       24924.50          46752.40  \n",
-       "2       57258.43         104010.83  \n",
-       "3       57258.43         121424.77  \n",
-       "4       57258.43         138982.86  "
+       "   cum_max_sales  \n",
+       "0       24924.50  \n",
+       "1       24924.50  \n",
+       "2       57258.43  \n",
+       "3       57258.43  \n",
+       "4       57258.43  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
