--- a/R/001_Introduction_to_Statistics_in_R/swirl_lesson_3_dimension_reduction.Rmd
+++ b/R/001_Introduction_to_Statistics_in_R/swirl_lesson_3_dimension_reduction.Rmd
@@ -23,3 +23,7 @@ dataMatrix <- dataMatrix[, -1]
 tempMatrix <- as.matrix(dataMatrix)
 heatmap(tempMatrix)
 ```
+
+We can see that even with the clustering that heatmap provides, permuting the
+ rows (observations) and columns (variables) independently, the data still looks
+ random.
