--- a/R/009_introduction_to_dataviz_with_ggplot2_Course_DC/000_intro_dataviz_ggplot2.Rmd
+++ b/R/009_introduction_to_dataviz_with_ggplot2_Course_DC/000_intro_dataviz_ggplot2.Rmd
@@ -214,7 +214,7 @@ plt_price_vs_carat <- ggplot(diamonds, aes(carat, price))
 
 # Edit this to map color to clarity,
 # Assign the updated plot to a new object
-___ <- plt_price_vs_carat + 
+plt_price_vs_carat_by_clarity <- plt_price_vs_carat + 
   geom_point(aes(color = clarity))
 
 # See the plot
